fix: update work link animation on small devices

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -81,6 +81,7 @@
   }
 
   .workCard {
+    position: relative;
     padding-top: 40px;
     padding-bottom: 40px;
     border-top: 1px solid var(--color-on-surface);
@@ -101,7 +102,8 @@
   }
 
   .workCardLinkIcon {
-    position: relative;
+    position: absolute;
+    right: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -111,7 +113,7 @@
     font-size: 0.8em;
     text-transform: uppercase;
     font-style: italic;
-    transform: translate(0, 0);
+    transform: translate(-80px, 0);
     opacity: 0;
     transition: opacity 0.3s cubic-bezier(0.49, 0, 0.6, 0.99),
       transform 0.25s cubic-bezier(0.49, 0, 0.6, 0.99);
@@ -121,16 +123,13 @@
       width: 160px;
       height: 160px;
       min-width: 160px;
+      transform: translate(-160px, 0);
     }
   }
 
   .workCard:hover .workCardLinkIcon {
-    transform: translate(120px, 0);
+    transform: translate(0, 0);
     opacity: 1;
-
-    @media (min-width: 768px) {
-      transform: translate(200px, 0);
-    }
   }
 
   .workCardImage {
